--- a/style.css
+++ b/style.css
@@ -472,6 +472,11 @@ h3{
     background-color: #fff;
 
 }
+.about-us2{
+    padding-top: 10px;
+    padding-bottom: 50px;
+    background-color: #000;
+}
 .about-us{
     padding-left: 8%;
 
