--- a/style.css
+++ b/style.css
@@ -159,8 +159,8 @@ h1{
  
 }
 .row5{
-    display: flex;
-    justify-content: space-evenly; 
+    display: inline-flex;
+    justify-content: space-between; 
  
 }
 .row3{
