--- a/style.css
+++ b/style.css
@@ -767,6 +767,101 @@ p{
 }
 .midnight-blue{-webkit-box-shadow:0 10px 50px -20px rgba(19,31,51,.65);box-shadow:0 10px 50px -20px rgba(19,31,51,.65);border:2px solid #222831;color:#EEE}.midnight-blue .calendar-sidebar{background:#222831;border-right:2px solid #222831;-webkit-box-shadow:0 0 18px -3px rgba(0,0,0,.65);box-shadow:0 0 18px -3px rgba(0,0,0,.65)}.midnight-blue.sidebar-hide .calendar-sidebar{-webkit-box-shadow:none;box-shadow:none}.midnight-blue .calendar-sidebar>.month-list::-webkit-scrollbar-thumb:hover{background:#cee1ff}.midnight-blue .calendar-sidebar>.month-list>.calendar-months>li{text-transform:uppercase}.midnight-blue .calendar-sidebar>.month-list>.calendar-months>li:hover{background-color:rgba(255,255,255,.2)}.midnight-blue .calendar-sidebar>.month-list>.calendar-months>li.active-month{background-color:#00adb5;font-weight:600}.midnight-blue .calendar-sidebar>span#sidebarToggler,.midnight-blue #eventListToggler{background-color:#222831;-webkit-box-shadow:0 0 18px -3px rgba(0,0,0,.65);box-shadow:0 0 18px -3px rgba(0,0,0,.65)}.midnight-blue .calendar-sidebar>span#sidebarToggler{right:-2px}.midnight-blue button.icon-button>span.bars{background-color:#00adb5}.midnight-blue button.icon-button>span.bars::before{background-color:#12cbd4}.midnight-blue button.icon-button>span.bars::after{background-color:#027e84}.midnight-blue .calendar-sidebar>.calendar-year>button.icon-button>span,.midnight-blue button.icon-button>span.chevron-arrow-right{display:block;border-right:6px solid #00adb5;border-bottom:6px solid #027e84}.midnight-blue .calendar-sidebar>.calendar-year>button.icon-button>span{border-width:4px}.midnight-blue .calendar-inner{background-color:#393e46;-webkit-box-shadow:5px 0 18px -3px rgba(0,0,0,.35);box-shadow:5px 0 18px -3px rgba(0,0,0,.35)}.midnight-blue .calendar-inner td{color:#fff}.midnight-blue th[colspan="7"]{position:relative;font-size:30px;color:#00adb5}.midnight-blue th[colspan="7"]::after{content:'';display:block;width:92%;height:1px;margin:0 auto;background:#027e84}.midnight-blue tr.calendar-body .calendar-day .day:hover{background-color:rgba(255,255,255,.12);color:#00f4ff}.midnight-blue tr.calendar-body .calendar-day .day.calendar-today{background:#00adb5}.midnight-blue tr.calendar-body .calendar-day .day{border-width:2px;border-radius:0;color:#fff}.midnight-blue tr.calendar-body .calendar-day .day.calendar-active,.midnight-blue tr.calendar-body .calendar-day .day.calendar-active:hover{border-color:#EEE;color:#EEE}.midnight-blue tr.calendar-body .calendar-day .day.calendar-today:hover{color:#EEE}.midnight-blue .calendar-events{background-color:#192435;padding:70px 20px 60px 20px}.midnight-blue .calendar-events::-webkit-scrollbar-thumb{background:#fff;border-radius:5px}.midnight-blue .calendar-events::-webkit-scrollbar-thumb:hover{background:#cee1ff}.midnight-blue .calendar-events p{color:#EEE}.midnight-blue .calendar-inner::after{background-color:rgba(25,36,53,.65)}.midnight-blue .event-container{border-radius:0}.midnight-blue .event-container:hover{background-color:#5d6979}.midnight-blue .event-container>.event-icon>div{border:2px solid transparent}.midnight-blue .event-container:hover>.event-icon>div{border-color:#fff}.midnight-blue .event-container>.event-icon>div.event-bullet-birthday,.midnight-blue .event-indicator>.type-bullet>div.type-birthday{background-color:#6c72bf}.midnight-blue .event-container>.event-info>p.event-title>span{color:#fff;border-radius:0;background-color:rgba(0,173,181,.15);border:1px solid #00adb5}.midnight-blue .event-container:hover>.event-info>p.event-title>span{background-color:rgb(0 173 181)}.midnight-blue .event-list>.event-empty{background-color:rgba(0,173,181,.15);border:1px solid #00adb5}.midnight-blue .event-list>.event-empty>p{color:#fff}@media only screen and (max-width:768px){.midnight-blue .event-indicator{-webkit-transform:translate(-50%,-100%);-ms-transform:translate(-50%,-100%);transform:translate(-50%,-100%)}.midnight-blue .calendar-events{-webkit-box-shadow:-5px 0 18px -3px rgba(0,0,0,.65);box-shadow:-5px 0 18px -3px rgba(0,0,0,.65)}.midnight-blue.event-hide .calendar-events{-webkit-box-shadow:none;box-shadow:none}}@media screen and (max-width:425px){.midnight-blue .calendar-sidebar{border-right:none}.midnight-blue .calendar-sidebar>.calendar-year{background-color:#222831;-webkit-box-shadow:0 3px 8px -3px rgba(0,0,0,.65);box-shadow:0 3px 8px -3px rgba(0,0,0,.65)}.midnight-blue .calendar-sidebar>.month-list{background-color:#192435}.midnight-blue .calendar-sidebar>span#sidebarToggler{right:0}.midnight-blue #eventListToggler,.midnight-blue .calendar-sidebar>span#sidebarToggler{-webkit-box-shadow:none;box-shadow:none}.midnight-blue .calendar-inner{-webkit-box-shadow:5px 0 18px -3px rgba(0,0,0,.35);box-shadow:0 5px 18px -3px rgba(0,0,0,.65)}.midnight-blue tr.calendar-body .calendar-day .day.calendar-active,.midnight-blue tr.calendar-body .calendar-day .day.calendar-active:hover{border-width:1px}.midnight-blue tr.calendar-body .calendar-day .day.calendar-today .event-indicator{-webkit-transform:translate(-50%,3px);-ms-transform:translate(-50%,3px);transform:translate(-50%,3px)}.midnight-blue tr.calendar-body .calendar-day .day.calendar-active .event-indicator{-webkit-transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);transform:translate(-50%,-50%)}.midnight-blue .event-indicator{-webkit-transform:translate(-50%,0);-ms-transform:translate(-50%,0);transform:translate(-50%,0)}.midnight-blue .calendar-events{padding:20px 15px}.midnight-blue.event-hide .calendar-events{padding:0 15px}}
 .royal-navy .calendar-sidebar{background-color:#216583;-webkit-box-shadow:5px 0 18px -3px #216583;box-shadow:5px 0 18px -3px #216583}.royal-navy.sidebar-hide .calendar-sidebar{-webkit-box-shadow:none;box-shadow:none}.royal-navy .calendar-sidebar>.month-list::-webkit-scrollbar-thumb:hover{background:#fff7e1}.royal-navy .calendar-sidebar>.month-list>.calendar-months{padding:0 15px 0 0}.royal-navy .calendar-sidebar>.month-list>.calendar-months>li{padding:9px 30px;border-radius:0 25px 25px 0}.royal-navy .calendar-sidebar>.month-list>.calendar-months>li:hover{background-color:rgba(0,0,0,.2)}.royal-navy .calendar-sidebar>.month-list>.calendar-months>li.active-month{background-color:rgba(0,0,0,.35)}.royal-navy .calendar-sidebar>span#sidebarToggler{width:35px;height:35px;top:10px;right:0;background-color:#f7be16;border-radius:50%;padding:8px;-webkit-transform:translate(50%,0);-ms-transform:translate(50%,0);transform:translate(50%,0);-webkit-box-shadow:0 5px 10px -3px #f7be16;box-shadow:0 5px 10px -3px #f7be16;-webkit-transition:all .3s ease;-o-transition:all .3s ease;transition:all .3s ease}.royal-navy.sidebar-hide .calendar-sidebar>span#sidebarToggler{-webkit-transform:translate(calc(100% + 10px),0);-ms-transform:translate(calc(100% + 10px),0);transform:translate(calc(100% + 10px),0)}.royal-navy button.icon-button>span.bars,.royal-navy button.icon-button>span.bars::before,.royal-navy button.icon-button>span.bars::after{height:3px}.royal-navy button.icon-button>span.bars::before{top:-6px}.royal-navy button.icon-button>span.bars::after{bottom:-6px}.royal-navy .calendar-inner{color:#164255}.royal-navy th[colspan="7"]{color:#216583}.royal-navy th[colspan="7"]::after{background-color:rgba(33,101,131,.15)}.royal-navy tr.calendar-body .calendar-day .day:hover{background-color:rgba(48,152,197,.25);color:#164255}.royal-navy tr.calendar-body .calendar-day .day.calendar-active,.royal-navy tr.calendar-body .calendar-day .day.calendar-active:hover{border-color:#164255}.royal-navy tr.calendar-body .calendar-day .day.calendar-today{background-color:#216583;color:#fff;-webkit-box-shadow:0 5px 10px -3px #216583;box-shadow:0 5px 10px -3px #216583}.royal-navy #eventListToggler{width:35px;height:35px;top:10px;background-color:#f7be16;border-radius:50%;padding:6px;-webkit-box-shadow:0 5px 10px -3px #f7be16;box-shadow:0 5px 10px -3px #f7be16;-webkit-transform:translateX(-10px);-ms-transform:translateX(-10px);transform:translateX(-10px);-webkit-transition:all .3s ease;-o-transition:all .3s ease;transition:all .3s ease}.royal-navy .calendar-events{padding-top:50px;padding-bottom:40px;background-color:#216583;color:#fff}.royal-navy .calendar-events::-webkit-scrollbar-thumb{background:#fff;border-radius:5px}.royal-navy .calendar-events::-webkit-scrollbar-thumb:hover{background:#fff7e1}.royal-navy .calendar-events>.event-header>p{text-transform:uppercase;padding-bottom:10px;border-bottom:1px solid #fff;color:#fff}.royal-navy .event-container:hover{background-color:#fff}.royal-navy .event-container>.event-info>p{color:#fff}.royal-navy .event-container:hover>.event-info>p{color:#164255}.royal-navy .event-container>.event-info>p.event-title>span{color:#fff;border:1px solid #164255;border-radius:15px;background-color:rgb(22 66 85)}.royal-navy .event-list>.event-empty{background-color:rgba(255,255,255,.15);border:1px solid #fff}.royal-navy .event-list>.event-empty>p{color:#fff}@media screen and (max-width:768px){.royal-navy .calendar-sidebar>.month-list>.calendar-months>li{padding:6px 26px}.royal-navy button.icon-button>span.bars,.royal-navy button.icon-button>span.bars::before,.royal-navy button.icon-button>span.bars::after{height:4px}.royal-navy .calendar-inner::after{background-color:rgba(44,81,97,.5)}.royal-navy .calendar-sidebar>span#sidebarToggler,.royal-navy #eventListToggler{width:50px;height:50px;padding:15px 12px}.royal-navy button.icon-button>span.bars::before{top:-8px}.royal-navy button.icon-button>span.bars::after{bottom:-8px}.royal-navy .calendar-events{-webkit-box-shadow:-5px 0 18px -3px #216583;box-shadow:-5px 0 18px -3px #216583}.royal-navy.event-hide .calendar-events{-webkit-transform:translateX(calc(100% + 1px));-ms-transform:translateX(calc(100% + 1px));transform:translateX(calc(100% + 1px));-webkit-box-shadow:none;box-shadow:none}.royal-navy #eventListToggler{-webkit-transform:translateX(50%);-ms-transform:translateX(50%);transform:translateX(50%)}.royal-navy.event-hide #eventListToggler{right:10px;-webkit-transform:translateX(0);-ms-transform:translateX(0);transform:translateX(0)}.royal-navy.event-hide .calendar-events #eventListToggler{-webkit-transform:translateX(calc(-100% - 10px));-ms-transform:translateX(calc(-100% - 10px));transform:translateX(calc(-100% - 10px))}}@media screen and (max-width:768px) and (min-width:426px){.royal-navy .calendar-events{padding-top:60px}}@media screen and (max-width:425px){.royal-navy .calendar-sidebar>.calendar-year{background-color:#216583;-webkit-box-shadow:0 5px 8px -3px rgba(12,37,47,.65);box-shadow:0 5px 8px -3px rgba(12,37,47,.65)}.royal-navy .calendar-sidebar>.month-list{background-color:#174d65}.royal-navy .calendar-sidebar>.month-list>.calendar-months{padding:10px}.royal-navy .calendar-sidebar>.month-list>.calendar-months>li{width:100%;padding:10px 20px;border-radius:25px;float:unset}.royal-navy.sidebar-hide .calendar-sidebar>span#sidebarToggler{-webkit-transform:translate(-5px,10px) scale(.9);-ms-transform:translate(-5px,10px) scale(.9);transform:translate(-5px,10px) scale(.9)}.royal-navy .calendar-sidebar>span#sidebarToggler{-webkit-transform:translate(-5px,10px) scale(.9);-ms-transform:translate(-5px,10px) scale(.9);transform:translate(-5px,10px) scale(.9)}.royal-navy .calendar-inner{padding:63px 0 40px 0;-webkit-box-shadow:0 5px 8px -3px rgba(12,37,47,.65);box-shadow:0 5px 8px -3px rgba(12,37,47,.65)}.royal-navy.event-hide .calendar-events,.royal-navy .calendar-events{padding:20px 15px;-webkit-transform:translateX(0);-ms-transform:translateX(0);transform:translateX(0)}.royal-navy.event-hide .calendar-events{padding:0 15px}.royal-navy.event-hide #eventListToggler,.royal-navy #eventListToggler{top:calc(100% - 185px);right:0;-webkit-transform:translate(-5px,-50%) scale(.9);-ms-transform:translate(-5px,-50%) scale(.9);transform:translate(-5px,-50%) scale(.9)}.royal-navy.event-hide #eventListToggler{top:100%;-webkit-transform:translate(0,-100%) scale(.8);-ms-transform:translate(0,-100%) scale(.8);transform:translate(0,-100%) scale(.8)}}
-
+.event-container {
+    font-family: "Roboto", sans-serif;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
+  .event-container h3.year {
+    font-size: 40px;
+    text-align: center;
+    border-bottom: 1px solid #b1b1b1;
+  }
+  
+  .event-container .event {
+    box-shadow: 0 4px 16px -8px rgba(0, 0, 0, 0.4);
+    display: flex;
+    border-radius: 8px;
+    margin: 32px 0;
+  }
+  
+  .event .event-left {
+    background: #222;
+    min-width: 82px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #eee;
+    padding: 8px 48px;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 8px 0 0 8px;
+  }
+  
+  .event .event-left .date {
+    font-size: 56px;
+  }
+  
+  .event .event-left .month {
+    font-size: 16px;
+    font-weight: normal;
+  }
+  
+  .event .event-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 24px;
+  }
+  
+  .event .event-right h3.event-title {
+    font-size: 24px;
+    margin: 24px 0 10px 0;
+    color: #f44336;
+    text-transform: uppercase;
+  }
+  
+  .event .event-right .event-timing {
+    background: #fff8ba;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    padding: 8px;
+    border-radius: 16px;
+    margin: 24px 0;
+    font-size: 14px;
+  }
+  .event-description{
+    color:white;
+  }
+  
+  .event .event-right .event-timing img {
+    height: 20px;
+    padding-right: 8px;
+  }
+  
+  @media (max-width: 550px) {
+    .event {
+      flex-direction: column;
+    }
+  
+    .event .event-left {
+      padding: 0;
+      border-radius: 8px 8px 0 0;
+    }
+  
+    .event .event-left .event-date .date,
+    .event .event-left .event-date .month {
+      display: inline-block;
+      font-size: 24px;
+    }
+  
+    .event .event-left .event-date {
+      padding: 10px 0;
+    }
+  }
+  
 
 
