--- a/style.css
+++ b/style.css
@@ -472,7 +472,7 @@ h3{
     color: #fff;
 }
 .sub-header h1{
-    margin-top: 100px;
+    margin-top: 0;
 }
 .about-us1{
     padding-left: 8%;
@@ -823,7 +823,7 @@ p{
   }
   
   .event .event-right .event-timing {
-    background: #fff8ba;
+    background: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
